chore: 盘点模版下载

--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -65,6 +65,9 @@
         <div class="operator-bar text-center" id="operator-bar">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
+
+            <button class="btn btn-secondary ml-2" type="button" name="download" onclick="window.location = '/inventory/count/template'">
+                <i class="fa fa-upload"></i> 下载模版</button>
         </div>
     </div>
 </th:block>
