--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -75,6 +75,13 @@
                         <label class="col-form-label mr-2" for="remark">备注</label>
                         <input class="form-control" type="text" id="remark" name="remark">
                     </div>
+                    <div class="form-group">
+                        <label class="col-form-label mr-2" for="remark">附件</label>
+                        <div class="attachment">
+                            <input type="file" multiple="multiple" name="attachment_file" id="attachment_file" data-group-name="inventory" onchange="upload.ajaxFileUpload()" style="width: 100px;">
+                            <input type="text" style="display:none;" name="attachmentList" id="attachmentList" value="[]">
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -106,6 +113,9 @@
 
     <script th:src="@{/js/jquery.dialogInput.js}"></script>
     <script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
+
+    <script th:src="@{/ajaxfileupload.js}"></script>
+    <script th:src="@{/js/upload.js}"></script>
 
     <script>
         var readonly = false
@@ -301,6 +311,8 @@
 
                     $editableTable.editableTablePlus('setValue', res.itemList)
 
+                    upload.appendAttachment(res.attachmentList)
+
                     res.itemList.forEach((item, index) => {
                         let $tr = $("#table-container tbody tr:nth-child("+(index + 1)+")")
                         // 出库入库
@@ -359,6 +371,11 @@
             $editableTable.editableTablePlus('clear')
 
             document.getElementById('referenceCode').value = ''
+            document.getElementById('remark').value = ''
+
+            document.getElementById('attachment_file').value = ''
+            document.getElementById('attachmentList').value = '[]'
+            $('.attachment .item').remove()
             // $("form.readonly :input").prop("disabled", false);
         }
 
@@ -370,6 +387,10 @@
             let params = $.extend({},
                 $('#form-operator').form2json({allowEmptyMultiVal:true}), $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
             params['itemList'] = $editableTable.editableTablePlus('getValue')
+
+            delete params.attachment_file
+            params['attachmentList'] = JSON.parse(params['attachmentList'])
+
             for (let item of params['itemList']) {
                 if (item.color) {
                     let res = [];
