--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -74,6 +74,19 @@
                         <label class="col-form-label mr-2" for="remark">备注</label>
                         <input class="form-control" type="text" id="remark" th:value="${po.remark}" name="remark">
                     </div>
+                    <div class="form-group">
+                        <label class="col-form-label mr-2" for="remark">附件</label>
+                        <div class="attachment">
+                            <input type="file" multiple="multiple" name="attachment_file" id="attachment_file" data-group-name="purchase" onchange="upload.ajaxFileUpload()" style="width: 100px;">
+                            <input type="text" style="display:none;" name="attachmentList" id="attachmentList" th:value="${po.attachmentList ne null ? T(com.rick.common.util.JsonUtils).toJson(po.attachmentList) : ''}">
+
+                            <th:block th:if="${po.attachmentList ne null}">
+                                <div class="item" th:each="f : ${po.attachmentList}">
+                                    <a th:text="${f.fullName}" th:href="${f.url}" target="_blank"></a><button type="button" class="btn btn-link attachment_delete_btn" th:onclick="upload.deleteAttachment([[${f.id}]], this)">删除</button>
+                                </div>
+                            </th:block>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -151,7 +164,7 @@
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
 
-            <button class="btn btn-secondary ml-2" type="button" name="send" onclick="download()" th:if="${po.id != null}">
+            <button class="btn btn-secondary ml-2" type="button" name="download" onclick="download()" th:if="${po.id != null}">
                 <i class="fa fa-upload"></i> 下载订单</button>
         </div>
     </div>
@@ -168,6 +181,9 @@
 
     <script th:src="@{/js/jquery.dialogInput.js}"></script>
     <script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
+
+    <script th:src="@{/ajaxfileupload.js}"></script>
+    <script th:src="@{/js/upload.js}"></script>
 
     <script th:inline="javascript">
         var readonly = false
@@ -400,6 +416,9 @@
             }
 
             var params = $('#form-header').form2json({allowEmptyMultiVal:true})
+            delete params.attachment_file
+            params['attachmentList'] = JSON.parse(params['attachmentList'])
+
             params['itemList'] = $editableTable.editableTablePlus('getValue')
             for (let item of params['itemList']) {
                 if (item.color) {
